--- a/inline_style.html
+++ b/inline_style.html
@@ -3,15 +3,32 @@
 <head>
 	<title>Inline style</title>
 	<meta charset="utf-8">
+	<style type="text/css">
+		p {
+			color: red;
+		}
+
+		h1{
+			color: blue;
+		}
+	</style>
 </head>
 <body>
 
 	<h1>Estilo CSS (Cascading Style Sheets)</h1>
-	<p style="color: green">
+	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta ligula elit, quis cursus augue rhoncus mattis. Vestibulum non ante ac tortor pretium tempor sit amet ac nunc.
 	</p>
 
-	<p style="color: green">
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta ligula elit, quis cursus augue rhoncus mattis. Vestibulum non ante ac tortor pretium tempor sit amet ac nunc.
+	</p>
+	<h1>Formatações</h1>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta ligula elit, quis cursus augue rhoncus mattis. Vestibulum non ante ac tortor pretium tempor sit amet ac nunc.
+	</p>
+
+	<p>
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta ligula elit, quis cursus augue rhoncus mattis. Vestibulum non ante ac tortor pretium tempor sit amet ac nunc.
 	</p>
 
