37.Anna Bella Project - Final Version

--- a/publicidade.html
+++ b/publicidade.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Anna Bella - Publicidade</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
-	<div id="header">
-		<div>
-			<img id="photo-capa" src="imagens/capa.png">
-		</div>
+	<div id="main">
+		
+		<img id="photo-capa" src="imagens/capa.png">
 
 		<div id="menu">
 			<a href="">HOME  |  </a>
 			<a href="bio.html">BIOGRAFIA  |  </a>
 			<a href="publicidade.html">CAMPANHAS PUBLICITÁRIAS  |  </a>
 			<a href="contato.html">CONTATO </a>
-			
+
+		</div>
+		
+
+		<div id="contents">
+			<h1>Publicidade</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<img class="photos" src="imagens/foto1.png">
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<img class="photos" src="imagens/foto2.png">
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<img class="photos" src="imagens/foto3.png">
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+		</div>
+			<h4 class="text-center">Todos direitos reservados</h4>
 		</div>
 	</div>
-
-	<div id="contents">
-		<p class="subtitulo">Publicidade</p>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<img class="photos" src="imagens/foto1.png">
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<img class="photos" src="imagens/foto2.png">
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<img class="photos" src="imagens/foto3.png">
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-		
-	</div>
-	<div id="footer">
-		Todos direitos reservados
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-	</div>
-
 
 </body>
 </html>
