--- a/index.html
+++ b/index.html
@@ -1,61 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Anna Bella Oficial</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
-	<div id="header">
-		<div>
-			<img id="photo-capa" src="imagens/capa.png">
-		</div>
+	<div id="main">
+		
+
+		<img id="photo-capa" src="imagens/capa.png">			
 
 		<div id="menu">
 			<a href="">HOME  |  </a>
 			<a href="bio.html">BIOGRAFIA  |  </a>
 			<a href="publicidade.html">CAMPANHAS PUBLICITÁRIAS  |  </a>
 			<a href="contato.html">CONTATO </a>
-			
+
+		</div>
+		
+
+		<div id="contents">
+			<h1>Sobre Anna Bella</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
+			</p>
+		</div>
+		<div id="footer">
+			<h4 class="text-center">Todos direitos reservados</h4>
 		</div>
 	</div>
-
-	<div id="contents">
-		<p class="subtitulo">Sobre Anna Bella</p>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ante augue, elementum a ligula ac, porta maximus odio. Donec efficitur laoreet euismod. Cras eu eros non augue sollicitudin placerat quis in risus. Vivamus ac ligula vel eros laoreet tincidunt. Ut tortor elit, imperdiet eu iaculis et, laoreet sit amet urna. Vestibulum sapien velit, placerat sed scelerisque vel, iaculis quis risus. Praesent commodo nisi sit amet sagittis lacinia. Nulla facilisi. Donec quis commodo lectus, at egestas elit
-		</p>
-	</div>
-	<div id="footer">
-		Todos direitos reservados
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-	</div>
-
 
 </body>
 </html>
